syntax = "proto3";

package crimemap.service;

option go_package = "crimemap_service";

message GetCrimesRequest {
  int64 time = 1;
}

message Crime {
  double longitude = 1;
  double latitude = 2;
}

message GetCrimesResponse { 
  repeated Crime crimes = 2; 
}

service CrimeMap {
  rpc GetCrimes(GetCrimesRequest) returns (GetCrimesResponse) {}
}